--- a/beacon-chain/sync/BUILD.bazel
+++ b/beacon-chain/sync/BUILD.bazel
@@ -149,6 +149,7 @@ go_test(
     size = "small",
     srcs = [
         "batch_verifier_test.go",
+        "benchmark_test.go",
         "blobs_test.go",
         "block_batcher_test.go",
         "broadcast_bls_changes_test.go",
@@ -266,5 +267,22 @@ go_test(
         "@com_github_sirupsen_logrus//:go_default_library",
         "@com_github_sirupsen_logrus//hooks/test:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
+    ],
+)
+
+go_test(
+    name = "go_benchmark_test",
+    size = "medium",
+    srcs = ["benchmark_test.go"],
+    args = [
+        "-test.bench=.",
+        "-test.benchmem",
+        "-test.v",
+    ],
+    embed = [":go_default_library"],
+    local = True,
+    tags = [
+        "benchmark",
+        "no-cache",
     ],
 )
